[gd_scene load_steps=20 format=2]

[ext_resource path="res://Harmonic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://audio/keystoke.wav" type="AudioStream" id=2]
[ext_resource path="res://shaders/dithering-pattern.png" type="Texture" id=3]
[ext_resource path="res://scenes/GatherFood.gd" type="Script" id=4]
[ext_resource path="res://scenes/FoodItem.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform sampler2D dither;
uniform int offset = 0;

void fragment() {
	ivec2 iuv = ivec2(UV * vec2(364, 570));
	int x = int(iuv.x % 8);
	int y = int(iuv.y % 8);
	ivec2 puv = ivec2(x, y);
	vec2 duv = vec2(float(puv.x + offset * 8) / 512f, float(puv.y) / 8f);
	vec2 uv = UV;
	vec4 c = texture(TEXTURE, uv);
	COLOR = vec4(vec3(0), texture(dither, duv).r);
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/offset = 53
shader_param/dither = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.105882, 0.113725, 0.133333, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0117647, 0.027451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0117647, 0.027451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.678431, 0.678431, 0.678431, 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0117647, 0.027451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.301961, 0.301961, 0.301961, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Button/colors/font_color = Color( 0.772549, 0.772549, 0.772549, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 0.254902, 0.254902, 0.254902, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 12.0
content_margin_right = 13.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 2

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 1 )

[node name="Choices" type="PanelContainer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -400.0
theme = SubResource( 9 )
custom_styles/panel = SubResource( 10 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 368.0
margin_bottom = 570.0
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 368.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
margin_left = 12.0
margin_top = 10.0
margin_right = 355.0
margin_bottom = 90.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true

[node name="ChoicesContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 368.0
margin_bottom = 514.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ChoicesContainer"]
margin_top = 137.0
margin_right = 368.0
margin_bottom = 169.0
text = "Who shall get what?"
align = 1

[node name="FoodBox" type="HBoxContainer" parent="VBoxContainer/ChoicesContainer"]
margin_top = 173.0
margin_right = 368.0
margin_bottom = 277.0
rect_min_size = Vector2( 0, 104 )
alignment = 1

[node name="FoodItem" parent="VBoxContainer/ChoicesContainer/FoodBox" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 0.0
margin_right = 128.0
margin_bottom = 104.0

[node name="FoodItem2" parent="VBoxContainer/ChoicesContainer/FoodBox" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 0.0
margin_right = 236.0
margin_bottom = 104.0

[node name="FoodItem3" parent="VBoxContainer/ChoicesContainer/FoodBox" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 0.0
margin_right = 344.0
margin_bottom = 104.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 514.0
margin_right = 368.0
margin_bottom = 524.0
custom_styles/separator = SubResource( 13 )
custom_constants/separation = 10

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_left = 98.0
margin_top = 524.0
margin_right = 269.0
margin_bottom = 560.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 14 )
text = "Continue Your Journey "

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 368.0
margin_bottom = 570.0
custom_styles/separator = SubResource( 13 )
custom_constants/separation = 10

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0
